more styling added

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1>Cocktails</h1>
-      <p>
-        <i class="fas fa-plus"></i>
-        <%= link_to "Add new cocktail", new_cocktail_path %>
-      </p>
+      <br>
+      <h3 class="main-header">Find your favourite cocktail</h3>
     </div>
   </div>
 </div>
