--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -23,3 +23,33 @@ a {
 a:hover {
   text-decoration: none;
 }
+
+.banner {
+  background-size: cover;
+  height: 300px;
+  margin-top: 20px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  h1 {
+    margin-top: 0;
+    text-align: center;
+    color: white;
+    padding-top: 100px;
+  }
+}
+
+.info {
+  text-align: right;
+  padding: 30px;
+}
+
+.content {
+  background-color: white;
+  height: 100vh;
+  h3 {
+    margin-top: 0;
+    padding: 20px;
+  }
+}
+
+
