Added URL to cocktails for images

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -12,7 +12,7 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-xs-12 col-sm-4">
         <%= link_to cocktail_path(cocktail) do %>
-          <div class="card" style="background-image:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url('https://source.unsplash.com/featured/?<%= cocktail.name %>');">
+          <div class="card" style="background-image:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url('<%= cocktail.url %>');">
             <h3>
               <%= cocktail.name %>
             </h3>
