--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6 col-xs-offset-3">
-          <div class="banner" style="background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)), url('https://source.unsplash.com/featured/?<%= @cocktail.name %>');">
+          <div class="banner" style="background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)), url('<%= @cocktail.url %>');">
             <h1>
               <%= @cocktail.name %>
             </h1>
