--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,7 +3,8 @@
     <div class="col-xs-6 col-xs-offset-3">
       <%= simple_form_for [@cocktail] do |f| %>
         <%= f.input :name %>
-        <%= f.input :url %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
         <%= f.submit "Add Cocktail", class: "btn btn-primary" %>
       <% end %>
     </div>
