--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,5 +1,13 @@
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :description %>
-  <%= f.association :ingredient %>
-  <%= f.submit "Add ingredient", class: "btn btn-primary" %>
-<% end %>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-3">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.input :description %>
+        <%= f.association :ingredient %>
+        <%= f.submit "Add ingredient", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
